# MTM1

./: CMakeLists.txt  eurovision.c  eurovision.h  eurovisionTests.c  eurovisionTestsMain.c  functions.c  functions.h  hw0q1.c  judge.c  judge.h  judges.h  map.c  map.h  mergeSort.c  state.c  state.h  states.h  tester1.c
eurovision/: eurovision.c  functions.c  functions.h  judge.c  judge.h  map.c  state.c  state.h
